added images folder

--- a/color-picker.html
+++ b/color-picker.html
@@ -125,8 +125,8 @@
 		<div class="steps">
 			<p>In this project you'll learn about using the <br>Picker View and Structs</p>
 			<p>Check out the <a href="https://docs.swift.org/swift-book/LanguageGuide/ClassesAndStructures.html">Structs</a> and <a href="https://developer.apple.com/documentation/uikit/uipickerview">Picker View</a> documentation if you get stuck.</p>
-			<image height=40% width=40% src="ColorPickerCyan.png"></image>
-			<image height=40% width=40% src="ColorPickerRed.png"></image>
+			<image height=40% width=40% src="./Images/ColorPickerCyan.png"></image>
+			<image height=40% width=40% src="./Images/ColorPickerRed.png"></image>
 		</div>
 
 		<div class="steps">
@@ -154,16 +154,16 @@
 			<p>6. Now we have an array with all of our colors, but we still need to link them to our Picker View. For this, we will need to use some of the Picker View functions which can be found <a href="https://developer.apple.com/documentation/uikit/uipickerview">here</a> and <a href="https://developer.apple.com/documentation/uikit/uipickerviewdelegate">here</a>.</p>
 			<br>
 			<p>In this project we will need:</p>
-			<image src="numberOfComponents.png"></image>
+			<image src="./Images/numberOfComponents.png"></image>
 			<p>To choose how many columns our Picker View has</p>
 			<br>
-			<image src="numberOfRowsInComponent.png" width=95%></image>
+			<image src="./Images/numberOfRowsInComponent.png" width=95%></image>
 			<p>To choose how many rows our Picker View has</p>
 			<br>
-			<image src="titleForRow.png" width=95% ></image>
+			<image src="./Images/titleForRow.png" width=95% ></image>
 			<p>So that we can rename each row of the<br>Picker View</p>
 			<br>
-			<image src="didSelectRow.png" width=95%></image>
+			<image src="./Images/didSelectRow.png" width=95%></image>
 			<p>So that we can control what happens when a specific row is selected</p>
 		</div>
 
